--- a/index.html
+++ b/index.html
@@ -10,18 +10,23 @@
 <meta name="description" content="জরুরী অবস্থায় রক্ত দানে এগিয়ে আসি সবাই, আপনার রক্তদানে বেচে জেতে পারে একটি মানুষের জীবন।">
 
 <!-- Facebook Meta Tags -->
-<meta property="og:url" content="https://roktoo.com">
+<title>Aura Studio - Enhance Your Creativity</title>
+<meta name="description" content="Unlock your creative potential with Aura Studio. Learn to create, edit, and produce engaging content for Facebook, YouTube, TikTok, and more.">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://aurastudio.com">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Roktoo - রক্ত দেই, জীবন বাঁচাই">
-<meta property="og:description" content="জরুরী অবস্থায় রক্ত দানে এগিয়ে আসি সবাই, আপনার রক্তদানে বেচে জেতে পারে একটি মানুষের জীবন।">
-<meta property="og:image" content="https://roktoo.com/images/web-preview-2.png" />
+<meta property="og:title" content="Aura Studio - Elevate Your Creative Projects">
+<meta property="og:description" content="Unlock your creative potential with Aura Studio. Learn to create, edit, and produce engaging content for Facebook, YouTube, TikTok, and more.">
+<meta property="og:image" content="https://static.vecteezy.com/system/resources/previews/005/239/129/non_2x/landing-page-web-header-dots-line-background-for-website-banner-template-free-vector.jpg" />
+
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
-<meta property="twitter:domain" content="roktoo.com">
-<meta property="twitter:url" content="https://roktoo.com">
-<meta name="twitter:title" content="Roktoo - Save Lives with Blood Donation">
-<meta name="twitter:description" content="জরুরী অবস্থায় রক্ত দানে এগিয়ে আসি সবাই, আপনার রক্তদানে বেচে জেতে পারে একটি মানুষের জীবন।">
-<meta name="twitter:image" content="https://roktoo.com/images/web-preview-2.png">
+<meta property="twitter:domain" content="aurastudio.com">
+<meta property="twitter:url" content="https://aurastudio.com">
+<meta name="twitter:title" content="Aura Studio - Enhance Your Creativity">
+<meta name="twitter:description" content="Learn how to create, edit, and produce professional content for social media platforms like Facebook, YouTube, and TikTok.">
+<meta name="twitter:image" content="https://static.vecteezy.com/system/resources/previews/005/239/129/non_2x/landing-page-web-header-dots-line-background-for-website-banner-template-free-vector.jpg">
   
 
   <link href="images/favicon.png" rel="icon">
