--- a/index.html
+++ b/index.html
@@ -71,12 +71,6 @@
         </div>
     </div>
 </header>
-<br><br><br><br>
-
-
-<br><br><br><br>
-
-<br><br><br><br>
 
 
 
@@ -95,7 +89,7 @@
 <div class="video-wrapper">
   <div class="video-container">
       <iframe 
-          src="https://www.youtube.com/embed/GG2be1MKOik?autoplay=0&controls=0&modestbranding=1&rel=0&showinfo=0" 
+          src="https://www.youtube-nocookie.com/embed/GftvgOYGXZc?rel=0&cc_load_policy=1&color=white&controls=0" 
           frameborder="0" 
           allowfullscreen>
       </iframe>
@@ -103,7 +97,7 @@
 </div>
 
 
-<br><br><br>
+<br>
 
 
 
@@ -248,7 +242,9 @@
 </div>
 
 
-<div class="counter-section" id="services">
+
+<h1 class="headline">Our Achievements and Expertise</h1>
+<div class="counter-section">
 <div class="counter">
 <h2>3,000+</h2>
 <p>Successful Projects</p>
@@ -266,8 +262,71 @@
 </div>
 </div>
 
+<h1 class="headline" id="services">Our Premium Services</h1>
+<div class="service-cards">
 
+  <!-- Scriptwriting Card -->
+  <div class="card scriptwriting box">
+   
+    <div class="card-body">
+      <h2>Scriptwriting</h2>
 
+      <ul>
+        <li>Custom Written Scripts</li>
+        <li>Tailored for Your Niche</li>
+        <li>Up to 5 Revisions</li>
+        <li>Storyline Consultation</li>
+      </ul>
+    </div>
+    <button class="buy-now">Learn More</button>
+  </div>
+
+  <!-- Voice Over Card -->
+  <div class="card voiceover box">
+    <div class="card-body">
+      <h2>Voice Over</h2>
+      <ul>
+        <li>Professional Voice Artists</li>
+        <li>Multiple Language Options</li>
+        <li>Up to 10 Revisions</li>
+        <li>Audio File in MP3 & WAV</li>
+      </ul>
+    </div>
+    <button class="buy-now">Learn More</button>
+  </div>
+
+  <!-- Video Editing Card -->
+  <div class="card video-editing box">
+    <div class="card-body">
+      <h2>Video Editing</h2>
+
+      <ul>
+        <li>Full HD Editing</li>
+        <li>Color Correction & Grading</li>
+        <li>VFX & Transitions</li>
+        <li>Up to 5 Revisions</li>
+      </ul>
+    </div>
+    <button class="buy-now">Learn More</button>
+  </div>
+
+  <!-- Thumbnail Design Card -->
+  <div class="card thumbnail-design box">
+    <div class="card-body">
+      <h2>Thumbnail Design</h2>
+      <ul>
+        <li>Custom YouTube Thumbnails</li>
+        <li>Optimized for CTR</li>
+        <li>Unlimited Revisions</li>
+        <li>Delivery in PNG & JPG</li>
+      </ul>
+    </div>
+    <button class="buy-now">Learn More</button>
+  </div>
+
+</div>
+
+<h1 class="headline">Our Testimonials</h1>
 <section class="container">
   <div class="testimonial mySwiper-testi">
     <div class="testi-content swiper-wrapper">
