--- a/index.html
+++ b/index.html
@@ -4,27 +4,27 @@
  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <!-- HTML Meta Tags -->
-<title>Material Student - Be your best version</title>
-<meta name="description" content="জরুরী অবস্থায় রক্ত দানে এগিয়ে আসি সবাই, আপনার রক্তদানে বেচে জেতে পারে একটি মানুষের জীবন।">
+<title>Aura Studio BD - Elevate Your Brand with Creative Services</title>
+<meta name="description" content="Get high-quality scriptwriting, voiceover, video editing, and thumbnail services to boost your brand's presence and engagement with Aura Studio BD.">
 
 <!-- Facebook Meta Tags -->
-<meta property="og:url" content="https://roktoo.com">
+<meta property="og:url" content="https://aurastudiobd.com">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Roktoo - রক্ত দেই, জীবন বাঁচাই">
-<meta property="og:description" content="জরুরী অবস্থায় রক্ত দানে এগিয়ে আসি সবাই, আপনার রক্তদানে বেচে জেতে পারে একটি মানুষের জীবন।">
-<meta property="og:image" content="https://roktoo.com/images/web-preview-2.png" />
+<meta property="og:title" content="Aura Studio BD - Creative Excellence for Your Brand">
+<meta property="og:description" content="Boost your brand's engagement with top-notch services like scriptwriting, voiceovers, video editing, and custom thumbnails from Aura Studio BD.">
+<meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTr5X32uJPXmfmSaZTn_W-qvuR37m4aIHSWeA&s" />
+
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
-<meta property="twitter:domain" content="roktoo.com">
-<meta property="twitter:url" content="https://roktoo.com">
-<meta name="twitter:title" content="Roktoo - Save Lives with Blood Donation">
-<meta name="twitter:description" content="জরুরী অবস্থায় রক্ত দানে এগিয়ে আসি সবাই, আপনার রক্তদানে বেচে জেতে পারে একটি মানুষের জীবন।">
-<meta name="twitter:image" content="https://roktoo.com/images/web-preview-2.png">
-  
+<meta property="twitter:domain" content="aurastudiobd.com">
+<meta property="twitter:url" content="https://aurastudiobd.com">
+<meta name="twitter:title" content="Aura Studio BD - Elevate Your Brand with Creative Services">
+<meta name="twitter:description" content="Experience high-quality scriptwriting, voiceover, video editing, and thumbnail services for your brand's success with Aura Studio BD.">
+<meta name="twitter:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTr5X32uJPXmfmSaZTn_W-qvuR37m4aIHSWeA&s">
 
-  <link href="images/favicon.png" rel="icon">
+ 
+ <link href="images/favicon.png" rel="icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.maateen.me/kalpurush/font.css" rel="stylesheet">
